--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@pythnetwork/hermes-client": "^2.0.0",
+    "@pythnetwork/pyth-solana-receiver": "^0.10.0",
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.7.9",
     "bip39": "^3.1.0",
